--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1,106 +1,116 @@
 ---
-images:
-- name: downtown-old-empty-retail-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-copper-circuit.jpg
-- name: bf-skinner-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-frosty-downtown-lights.jpg
-- name: oldhouse-granaryfield-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-circuit.jpg
-- name: crow-crow-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-alberto-giacometti.jpg
-- name: aws-s3-stories-new-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-statue-face-open-mouth-copper-circuit.png
-- name: art-museum-art-museum-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-attack-planes.jpg
-- name: liberty-back-statue-liberty-back-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crunch-paper.jpg
-- name: flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
-- name: oldsmallboat-oldsmallboat-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-clean-view.jpg
-- name: oldcabin-store-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-wols.jpg
-- name: meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-- name: old-granary-field-oldhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-collage.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
-- name: miamibeach-miamibeach-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-internet-numbers.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-attack-planes.jpg
-- name: server-racks-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
-- name: mediterranean-mediterranean-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-two.jpg
-- name: dragon-desert-desert-dragon-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-umberto-bocc.jpg
-- name: bf-skinner-statue-architecture-holding.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-architecture-holding.jpg
-- name: old-house-oldhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-post-modern.jpg
-- name: cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
-- name: yosemite-yosemite-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-kandinsky-bv.jpg
-- name: downtown-los-angeles-downtown-la-kand-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-kand-two.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: udnie-DSC_0004.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0004.jpg
-- name: beach-rocks-beach-rocks-currents-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-aqua.jpg
-- name: aws-s3-stories-berlin-wall-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-berlin-wall-graham-sutherland.jpg
-- name: eduardo-eduardo-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-emily-carr.jpg
-- name: white-house-lawn-white-house-window-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dry-skin.jpg
-- name: art-museum-art-museum-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
-- name: trucksilo-trucksilo-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-missle.jpg
-- name: lincoln-memorial-lincolnmemorial-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crunch-paper.jpg
-- name: windowmountain-window-mountain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kand-two.jpg
-- name: bf-skinner-eiphel-tower-paris-brown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-eiphel-tower-paris-brown.jpg
-- name: copper-circuit-capital_36728421355_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-capital_36728421355_o.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
-- name: razorcliff-razorcliff-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-really-hot.jpg
-- name: stalin-time-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-train-on-tracks.jpg
-- name: meadowbutterfly-meadow-butterfly-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-really-hot.jpg
-- name: aws-s3-stories-old-yellow-house.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-yellow-house.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
-- name: aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
-- name: powerlines-power-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-post-modern.jpg
-- name: status-berlin-status-berlin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-ww2-color.png
-- name: stories-flower-barbed-wire-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-flower-barbed-wire-nazi-poster.jpg
-- name: school-clouds-church-clouds-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-jap-wav-pr.jpg
-- name: lincoln-memorial-lincolnmemorial-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-sunday.jpg
-- name: curtain-curtain-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-blocks.jpg
-- name: server-cloud-server-racks-door-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sunday.jpg
+layout: post
+title: The US Narrative for December 21, 2019
+source: http://kinlane.com/2019/12/21/the-us-narrative-today/
+domain: the.us.narrative.today.kinlane.com
+stories:
+- title: Readers Ask Holiday Questions
+  paper: 'York News Times '
+  city: York
+  state: Nebraska
+  domain: http://www.yorknewstimes.com/
+  link: https://www.yorknewstimes.com/news/local/readers-ask-holiday-questions/article_f19a157a-2361-11ea-a129-378f7e4571b9.html
+- title: Information On Reckless Driving Laws In Virginia
+  paper: 'Business Times '
+  city: New Haven
+  state: Connecticut
+  domain: http://www.ctbusinesstimes.com/
+  link: https://www.ctbusinesstimes.com/2018/06/05/information-on-reckless-driving-laws-in-virginia/
+- title: Buttigieg Backers Defend 'wine Cave' Fundraiser
+  paper: 'Lincoln Journal Star '
+  city: Lincoln
+  state: Nebraska
+  domain: http://www.journalstar.com/
+  link: https://journalstar.com/news/national/buttigieg-backers-defend-wine-cave-fundraiser/image_4d9df055-6bc7-5845-9bfd-46aa0bfb8779.html
+- title: Trump Blasts Christian Magazine That Called For His Removal
+  paper: 'Aspen Daily News '
+  city: Aspen
+  state: Colorado
+  domain: http://www.aspendailynews.com/
+  link: https://www.aspendailynews.com/associated_press/trump-blasts-christian-magazine-that-called-for-his-removal/article_555d06ee-f45b-5fcc-8c73-809d4603ca55.html
+- title: Thursday Night Basketball Action
+  paper: 'The Independent Tribune '
+  city: Concord
+  state: North Carolina
+  domain: http://www.independenttribune.com/
+  link: https://www.independenttribune.com/thursday-night-basketball-action/image_6036fa3a-2375-11ea-88e6-fb0906df7122.html
+- title: Indians Lose To Dogs
+  paper: 'The South Reporter '
+  city: Holly Springs
+  state: Mississippi
+  domain: http://www.southreporter.com
+  link: https://www.southreporter.com/sports/indians-lose-%E2%80%99dogs
+- title: Acciari Has Second Straight Hat Trick, Panthers Beat Stars
+  paper: 'The Baytown Sun '
+  city: Baytown
+  state: Texas
+  domain: http://www.baytownsun.com/
+  link: http://baytownsun.com/sports/ap_sports/article_093cddf3-e023-5ff7-bc82-0c197fbe5ff2.html
+- title: Plastic Products Company Coming To Kershaw County
+  paper: 'Chronicle Independent '
+  city: Camden
+  state: South Carolina
+  domain: http://www.chronicle-independent.com/
+  link: https://www.chronicle-independent.com/news/business/plastic-products-company-coming-kershaw-county/
+- title: Klobuchar Steps Up Hits On Buttigieg With Iowa Vote Looming
+  paper: 'Clinton Herald '
+  city: Clinton
+  state: Iowa
+  domain: http://www.clintonherald.com/
+  link: https://www.clintonherald.com/region/klobuchar-steps-up-hits-on-buttigieg-with-iowa-vote-looming/article_c95cc162-f26b-5c88-a47a-6cbfe545e727.html
+- title: KPS3 Hires Brittany Silva As Account Director
+  paper: 'Nevada Business Journal '
+  city: Las Vegas
+  state: Nevada
+  domain: http://www.nevadabusiness.com/
+  link: https://www.nevadabusiness.com/2019/12/kps3-hires-brittany-silva-as-account-director/
+- title: Attorney General Faces Potential Suspension Of Law License
+  paper: 'Herald-Times '
+  city: Bloomington
+  state: Indiana
+  domain: http://www.hoosiertimes.com/
+  link: https://www.hoosiertimes.com/reporter_times/news/attorney-general-faces-potential-suspension-of-law-license/article_4df5a282-2275-11ea-b1c1-8f38204e7e2c.html
+- title: Record Number To Travel In Tennessee, Nationwide This Holiday
+  paper: 'Memphis Flyer '
+  city: Memphis
+  state: Tennessee
+  domain: http://www.memphisflyer.com/
+  link: https://www.memphisflyer.com/NewsBlog/archives/2019/12/20/record-number-to-travel-in-tennessee-nationwide-this-holiday
+- title: Sir Rod Stewart Has Big Christmas Party
+  paper: 'Watauga Democrat '
+  city: Boone
+  state: North Carolina
+  domain: http://www.wataugademocrat.com/
+  link: https://www.wataugademocrat.com/lifestyles/entertainment/sir-rod-stewart-has-big-christmas-party/image_a00362cb-8b76-5a93-8a01-701e0156ed0e.html
+- title: Worth Hires Ironside As Head Coach
+  paper: 'Tifton Gazette '
+  city: Tifton
+  state: Georgia
+  domain: http://www.tiftongazette.com/
+  link: https://www.tiftongazette.com/sports/worth-hires-ironside-as-head-coach/article_a406d964-2353-11ea-b921-3791079b1eac.html
+- title: Buttigieg Backers Defend 'wine Cave' Fundraiser
+  paper: 'The Decatur Daily '
+  city: Decatur
+  state: Alabama
+  domain: http://www.decaturdaily.com/
+  link: https://www.decaturdaily.com/news/other_news/national/buttigieg-backers-defend-wine-cave-fundraiser/article_9099cf72-b8ac-51be-9dcd-6e75e8fc8b31.html
+- title: Temporary Interim State Attorney To Be Sworn In Monday
+  paper: 'Lake City Reporter '
+  city: Lake City
+  state: Florida
+  domain: http://www.lakecityreporter.com/
+  link: https://www.lakecityreporter.com/local/temporary-interim-state-attorney-be-sworn-monday
+- title: Youngtown St West Virginia Basketball
+  paper: 'Times-West Virginian '
+  city: Fairmont
+  state: West Virginia
+  domain: http://www.timeswv.com/
+  link: https://www.timeswv.com/youngtown-st-west-virginia-basketball/image_16ae3e06-23ab-11ea-bebb-03e5c6984509.html
+- title: Friday's Boys Basketball Results
+  paper: 'Post-Bulletin '
+  city: Rochester
+  state: Minnesota
+  domain: http://www.postbulletin.com/
+  link: https://www.postbulletin.com/sports/high_school/basketball/friday-s-boys-basketball-results/article_a908a020-2392-11ea-9eb8-a7c829a0d8cb.html
 ---
-
+Readers Ask Holiday Questions.&nbsp;Information On Reckless Driving Laws In Virginia.&nbsp;Buttigieg Backers Defend 'wine Cave' Fundraiser.&nbsp;Trump Blasts Christian Magazine That Called For His Removal.&nbsp;Thursday Night Basketball Action.&nbsp;Indians Lose To Dogs.&nbsp;Acciari Has Second Straight Hat Trick, Panthers Beat Stars.&nbsp;Plastic Products Company Coming To Kershaw County.&nbsp;
